--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,4 +9,34 @@
     background-color:#fcfcfc;
 }
 
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 15px;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #30336b;
+  color: white;
+  padding: 12px 20px;
+  margin-top:12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #130f40;
+}
+
+.container {
+  border-radius: 5px;
+}
 
