--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,6 @@ input[type=submit] {
   background-color: #30336b;
   color: white;
   padding: 12px 20px;
-  margin-top:12px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -40,3 +39,15 @@ input[type=submit]:hover {
   border-radius: 5px;
 }
 
+
+.size350 {
+ height:350px; 
+ width:350px;
+ object-fit: contain;   
+}
+
+.size250 {
+ height:250px; 
+ width:250px;
+ object-fit: contain;
+}
